# deadcode-archaeologist

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
archaeologist/: __init__.py  __main__.py  analyzer.py  cli.py  excavator.py  models.py  reporter.py
tests/: conftest.py  test_analyzer.py  test_excavator.py  test_models.py
